# Joiny-Mnemonic

./: .gitignore  61  AGENTS.md  HANDOFF2.md  INSTALL_CLAUDE_CODE.md  LICENSE  README.md  ROADMAP.md  STAGE1_REPORT.md  TODO.md  goal.md  handoff.md  install.ps1  install.sh  pyproject.toml  stage1-audit-residual-risks.md  task.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md
.codex/: hooks.json
benchmarks/: census.py  extraction_gate.py  prewarm_distill.py  rejudge.py  run_benchmark.py  runner_anthropic.py  runner_claude_code.py  validate_corpus.py
benchmarks/fixtures/: diff_after.py  diff_before.py
benchmarks/fixtures/failing_suite/: test_regression.py
benchmarks/results/: census-deep-latest.json  census-latest.json  census-manual-audit.md  census.md  check-material.md  distill-ab.md  extraction-gate-extraction_en_v2.jsonl  extraction-gate-extraction_ru_v2.jsonl  extraction-gate-latest-limit3.json  extraction-gate-latest.json  flip-audit.md  hook-timing-latest.json  latest.json  latest.md  longmemeval-latest.json  longmemeval-latest.jsonl  rejudge-opus.json
benchmarks/results/cm-60-baseline/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/cm-60-checkmaterial/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/cm-abs-baseline/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/cm-abs-checkmaterial/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/cm-abs-checkmaterial-v2/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/cm-preference/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/cm-preference-v2/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/distill-ab-60/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/distill-ab-knowledge-update/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/distill-ab-preference/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/distill-aware-knowledge-update/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/distill-keyed-knowledge-update/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/distill-keyed-preference/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/distill-keyedfacts-noclosure-ku/: longmemeval-latest.json  longmemeval-latest.jsonl
benchmarks/results/extraction-codex-audit-20260717/: README.md  audit.json  audit_schema.json  prompt.txt
benchmarks/results/gpt-rejudge-codex-20260714-225820/: batch_000.codex.json  batch_000.jsonl  batch_001.codex.json  batch_001.jsonl  batch_002.codex.json  batch_002.jsonl  batch_003.codex.json  batch_003.jsonl  batch_004.codex.json  batch_004.jsonl  batch_005.codex.json  batch_005.jsonl  batch_006.codex.json  batch_006.jsonl  batch_007.codex.json  batch_007.jsonl  batch_008.codex.json  batch_008.jsonl  batch_009.codex.json  batch_009.jsonl  batch_010.codex.json  batch_010.jsonl  batch_011.codex.json  batch_011.jsonl  batch_012.codex.json  batch_012.jsonl  batch_013.codex.json  batch_013.jsonl  batch_014.codex.bad.json  batch_014.codex.json  batch_014.jsonl  batch_015.codex.json  batch_015.jsonl  batch_016.codex.json  batch_016.jsonl  batch_017.codex.json  (+47 more)
docs/: architecture.md  backup.md  context-limits.md  evaluation.md  host-e2e.md  installation.md  integrations.md  performance.md  requirements-traceability.md  security.md
evals/: extraction_en_v1.json  extraction_en_v2.json  extraction_ru_v1.json  extraction_ru_v2.json  reference_resume_tasks.json
plugins/knowledge-graph/: README.md  pyproject.toml
plugins/knowledge-graph/src/joiny_mnemonic_knowledge_graph/: __init__.py
plugins/nuextract-local/: README.md  pyproject.toml
plugins/nuextract-local/src/joiny_mnemonic_nuextract/: __init__.py
plugins/reranker-local/: README.md  pyproject.toml
plugins/reranker-local/src/joiny_mnemonic_reranker_local/: __init__.py
plugins/semantic-local/: README.md  pyproject.toml
plugins/semantic-local/src/joiny_mnemonic_semantic_local/: __init__.py
quality/: complexity-baseline.json
scripts/: finalization_observe.py  stage1_gates.py
src/joiny_mnemonic/: __init__.py  adapters.py  api.py  benchmark_cli.py  benchmarking.py  cli.py  code_index.py  configuration.py  consolidation.py  context.py  context_limit_presets.json  context_limits.py  dataflow.py  dataflow_storage.py  evaluation.py  explorer.html  explorer.py  extraction.py  extraction_evaluation.py  failure_quality.py  finalization_observer.py  governor.py  hook_timing.py  hooks.py  installer.py  longmemeval.py  mcp.py  models.py  paths.py  physical.py  plugins.py  policy_contract.py  precheck.py  prompt.py  provenance.py  reconciler.py  reducers.py  report_signing.py  retrieval.py  security.py  (+13 more)
tests/: test_benchmarking.py  test_bitemporal.py  test_census_proxy.py  test_code_index.py  test_consolidation_and_hooks.py  test_context_expansion.py  test_context_limits.py  test_core.py  test_dataflow.py  test_extraction.py  test_extraction_english.py  test_failure_lesson.py  test_finalization_observer.py  test_hook_cold_path.py  test_installer.py  test_integrations.py  test_json_reducer.py  test_longmemeval.py  test_native_failure_capture.py  test_nuextract_plugin.py  test_packet_invariants.py  test_plugins_and_integrity.py  test_precheck.py  test_private_regions.py  test_reconciler.py  test_reduction_usage_governor_tasks.py  test_retrieval_fusion.py  test_retrieval_health.py  test_settlement.py  test_settlement_surfaces.py  test_snapshots_and_prompt.py  test_stage1_gates.py  test_stage1_transitions.py  test_staleness.py  test_task5_tail.py  test_telemetry.py  test_temporal_core.py  test_trust_policy.py  test_witness.py  test_workstream_surfaces.py
tests/fixtures/: pre_temporal_v7.db
