[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "joiny-mnemonic"
version = "0.8.0"
description = "Joiny-Mnemonic: agent-agnostic, provenance-first memory for long-running LLM sessions"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
benchmark = ["tiktoken>=0.7"]

[project.scripts]
joiny-mnemonic = "joiny_mnemonic.cli:main"
joiny-mnemonic-benchmark = "joiny_mnemonic.benchmark_cli:main"
joiny-mnemonic-longmemeval = "joiny_mnemonic.longmemeval:main"
joiny-mnemonic-hook-timing = "joiny_mnemonic.hook_timing:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["joiny_mnemonic*"]

[tool.setuptools.package-data]
joiny_mnemonic = ["context_limit_presets.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
