[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "joiny-mnemonic"
version = "0.8.0"
description = "Joiny-Mnemonic: agent-agnostic, provenance-first memory for long-running LLM sessions"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
benchmark = ["tiktoken>=0.7"]
explorer = ["fastapi>=0.115", "pydantic>=2.11", "uvicorn>=0.34"]
dev = ["ruff>=0.12", "pyright>=1.1.400"]

[project.scripts]
joiny-mnemonic = "joiny_mnemonic.cli:main"
joiny-mnemonic-benchmark = "joiny_mnemonic.benchmark_cli:main"
joiny-mnemonic-longmemeval = "joiny_mnemonic.longmemeval:main"
joiny-mnemonic-hook-timing = "joiny_mnemonic.hook_timing:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["joiny_mnemonic*"]

[tool.setuptools.package-data]
joiny_mnemonic = ["context_limit_presets.json", "explorer.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Start with correctness-only rules so CI is green on the existing codebase;
# style/modernization rules can be ratcheted in without a repository-wide rewrite.
select = ["E9", "F63", "F7", "F82"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
