[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "joiny-mnemonic-semantic-local"
version = "0.1.0"
description = "Local sentence-transformer semantic retrieval plugin for Joiny-Mnemonic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joiny-mnemonic>=0.4.0",
  "sentence-transformers>=3.0",
]
license = {text = "MIT"}

[project.entry-points."joiny_mnemonic.semantic"]
local-sentence-transformers = "joiny_mnemonic_semantic_local:create_plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["joiny_mnemonic_semantic_local*"]